[package]
name = "rendering"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.45"
bytemuck = { version = "1.7.2", features = ["derive"] }
cgmath = "0.18.0"
env_logger = "0.9.0"
image = "0.23.14"
legion = "0.4.0"
log = "0.4.14"
nalgebra = "0.29.0"
num-traits = "0.2.14"
rayon = "1.5.1"
tobj = "3.2.0"
tokio = { version = "1.14.0", features = ["full"] }
wgpu = "0.11.0"
winit = "0.25.0"

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.2"
glob = "0.3"
